tests/test_input_files/good/test_good_array_25.punkt
main {
	var A = alloc [int] (4).
	A = [1, 2].
	println A.
}
