tests/test_input_files/bad/test_bad_array_7.punkt
main {
	var x = 5.
	const A = alloc (int) (x).
}
